--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
@@ -16,7 +16,7 @@
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v10.0</TargetFrameworkVersion>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
@@ -57,9 +57,34 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\CustomEntryRenderer.cs" />
+    <Compile Include="Controls\CustomPickerRenderer.cs" />
+    <Compile Include="Controls\CustomTextAreaRenderer.cs" />
+    <Compile Include="Controls\HyperLinkLabelRenderer.cs" />
+    <Compile Include="Controls\IconButtonRenderer.cs" />
+    <Compile Include="IconFonts\EntypoPlusModule.cs" />
+    <Compile Include="IconFonts\FontAwesomeModule.cs" />
+    <Compile Include="IconFonts\IconFontSupport.cs" />
+    <Compile Include="IconFonts\IoniconsModule.cs" />
+    <Compile Include="IconFonts\MaterialModule.cs" />
+    <Compile Include="IconFonts\MeteoconsModule.cs" />
+    <Compile Include="IconFonts\SimpleLineIconsModule.cs" />
+    <Compile Include="IconFonts\TypiconsModule.cs" />
+    <Compile Include="IconFonts\WeatherIconsModule.cs" />
+    <Compile Include="Loggers\AppCenterLogger.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BluetoothSerial.cs" />
+    <Compile Include="Services\ClipBoard.cs" />
+    <Compile Include="Services\DispatcherServices.cs" />
+    <Compile Include="Services\NetworkService.cs" />
+    <Compile Include="Services\SecureStorage.cs" />
+    <Compile Include="Services\StorageService.cs" />
+    <Compile Include="Services\TCPClient.cs" />
+    <Compile Include="Services\UDPClient.cs" />
+    <Compile Include="Services\WebSocket.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\font\iconizeentypoplus.ttf" />
@@ -111,32 +136,44 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>2.1.1286-beta1412</Version>
+      <Version>2.1.1359-beta1343</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>2.1.1286-beta1412</Version>
+      <Version>2.1.1359-beta1343</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Deployment.Models">
-      <Version>2.1.1285-beta1826</Version>
+      <Version>2.1.1359-beta1343</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.DeviceMessaging.Models">
-      <Version>2.1.1285-beta1826</Version>
+      <Version>2.1.1359-beta1343</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>2.1.1285-beta1826</Version>
+      <Version>2.1.1359-beta1343</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Pipeline.Models">
-      <Version>2.1.1285-beta1826</Version>
+      <Version>2.1.1359-beta1343</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>2.1.1285-beta1826</Version>
+      <Version>2.1.1359-beta1343</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
-      <Version>4.4.0</Version>
+      <Version>5.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.MediaRouter">
+      <Version>1.2.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.Palette">
+      <Version>1.0.0.6</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>4.8.0.1821</Version>
+      <Version>5.0.0.1931</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Google.Android.Material">
+      <Version>1.2.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData" Version="2.2.0.3" />
+    <PackageReference Include="Xamarin.AndroidX.Browser" Version="1.3.0.3-alpha01" />
+    <PackageReference Include="Xamarin.AndroidX.Legacy.Support.V4" Version="1.0.0.5" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\splashbg.jpg" />
@@ -173,10 +210,6 @@
     <ProjectReference Include="..\..\..\src\LagoVista.XPlat.Core\LagoVista.XPlat.Core.csproj">
       <Project>{8fa51876-7923-4046-a5ce-77057c82675e}</Project>
       <Name>LagoVista.XPlat.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\src\LagoVista.XPlat.Droid\LagoVista.XPlat.Droid.csproj">
-      <Project>{981e1800-122a-4204-8826-3b981b8dfea4}</Project>
-      <Name>LagoVista.XPlat.Droid</Name>
     </ProjectReference>
     <ProjectReference Include="..\LagoVista.XPlat.Sample\LagoVista.XPlat.Sample.csproj">
       <Project>{22e077f4-28b1-46e3-b624-361b6d2a9d4f}</Project>
