--- a/src/LagoVista.XPlat.Droid/LagoVista.XPlat.Droid.csproj
+++ b/src/LagoVista.XPlat.Droid/LagoVista.XPlat.Droid.csproj
@@ -14,7 +14,7 @@
     <FileAlignment>512</FileAlignment>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v10.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,11 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controls\CustomEntryRenderer.cs" />
-    <Compile Include="Controls\CustomPickerRenderer.cs" />
-    <Compile Include="Controls\HyperLinkLabelRenderer.cs" />
-    <Compile Include="Controls\IconButtonRenderer.cs" />
-    <Compile Include="Controls\CustomTextAreaRenderer.cs" />
     <Compile Include="IconFonts\EntypoPlusModule.cs" />
     <Compile Include="IconFonts\FontAwesomeModule.cs" />
     <Compile Include="IconFonts\IconFontSupport.cs" />
@@ -76,19 +71,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core">
-      <Version>2.1.1286-beta1412</Version>
+      <Version>2.1.1359-beta1343</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Authentication">
-      <Version>2.1.1286-beta1412</Version>
+      <Version>2.1.1359-beta1343</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.Core.Networking">
-      <Version>2.1.1286-beta1412</Version>
+      <Version>2.1.1359-beta1343</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.IoT.Logging">
-      <Version>2.1.1285-beta1826</Version>
+      <Version>2.1.1359-beta1343</Version>
     </PackageReference>
     <PackageReference Include="LagoVista.UserAdmin.Models">
-      <Version>2.1.1285-beta1826</Version>
+      <Version>2.1.1359-beta1343</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter">
       <Version>4.1.0</Version>
@@ -96,6 +91,8 @@
     <PackageReference Include="Microsoft.AppCenter.Analytics">
       <Version>4.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.AndroidX.MediaRouter" Version="1.2.1" />
+    <PackageReference Include="Xamarin.AndroidX.Palette" Version="1.0.0.6" />
     <PackageReference Include="Microsoft.AppCenter.Crashes">
       <Version>4.1.0</Version>
     </PackageReference>
@@ -103,13 +100,16 @@
       <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.Platforms">
-      <Version>5.0.0</Version>
+      <Version>5.0.1</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>4.8.0.1821</Version>
+      <Version>5.0.0.1931</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Google.Android.Material">
+      <Version>1.2.1.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -121,9 +121,6 @@
       <Project>{8fa51876-7923-4046-a5ce-77057c82675e}</Project>
       <Name>LagoVista.XPlat.Core</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\Values\Strings.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
