--- a/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
+++ b/samples/LagoVista.XPlat.Sample/LagoVista.XPlat.Sample.Droid/LagoVista.XPlat.Sample.Droid.csproj
@@ -76,6 +76,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\AppService.cs" />
     <Compile Include="Services\BluetoothSerial.cs" />
     <Compile Include="Services\ClipBoard.cs" />
     <Compile Include="Services\DispatcherServices.cs" />
